--- a/src/Permiso/AuthBundle/Resources/config/routing.yml
+++ b/src/Permiso/AuthBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 permiso_auth_homepage:
-    pattern:  /hello/{name}
+    pattern:  /
     defaults: { _controller: PermisoAuthBundle:Default:index }
