--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,15 @@ permiso_auth:
     resource: "@PermisoAuthBundle/Resources/config/routing.yml"
     prefix:   /
 
+login:
+    pattern: /login
+    defaults: { _controller: PermisoAuthBundle:Security:login }
+ 
+login_check:
+    pattern: /login_check
+ 
+logout:
+    pattern: /logout
 # Internal routing configuration to handle ESI
 #_internal:
 #    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
