--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -10,7 +10,7 @@ security:
  
     providers:
         user_db:
-            entity: { class: Permiso\AuthBundle\Entity\Usuario, property: username }
+            entity: { class: Permiso\AuthBundle\Entity\Usuario, property: usuario }
  
     firewalls:
         main:
@@ -19,7 +19,8 @@ security:
             form_login:
                 login_path: /login
                 check_path: /login_check
-                remember_me: true
+                default_target_path: /index
+                always_use_default_target_path: true
             logout:
                 path: /logout
                 target: /
@@ -29,4 +30,4 @@ security:
         - { path: /login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /user, roles: ROLE_USER }
         - { path: /admin, roles: ROLE_ADMIN }
-        - { path: /.*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /.*, roles: ROLE_USER }
