--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,11 +23,11 @@ security:
                 always_use_default_target_path: true
             logout:
                 path: /logout
-                target: /
+                target: /index
             security: true
             anonymous: true
     access_control:
         - { path: /login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /user, roles: ROLE_USER }
         - { path: /admin, roles: ROLE_ADMIN }
-        - { path: /.*, roles: ROLE_USER }
+        - { path: /.*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
