Navegación por defecto dirigida al index

--- a/src/Permiso/AuthBundle/Resources/config/routing.yml
+++ b/src/Permiso/AuthBundle/Resources/config/routing.yml
@@ -1,5 +1,5 @@
 permiso_auth_homepage:
-    pattern:  /auth
+    pattern:  /
     defaults: { _controller: PermisoAuthBundle:Default:index }
     
 usuario_registrado:
