--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,11 +19,11 @@ security:
             form_login:
                 login_path: /login
                 check_path: /login_check
-                default_target_path: /index
+                default_target_path: /
                 always_use_default_target_path: true
             logout:
                 path: /logout
-                target: /index
+                target: /
             security: true
             anonymous: true
     access_control:
