--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,16 +1,16 @@
 security:
     encoders:
-        Permiso\AuthBundle\Entity\Usuario:
+        Permiso\GestionBundle\Entity\Empleado:
             algorithm: sha512
             encode-as-base64: true
             iterations: 10
  
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_USER]
+        ROLE_GESTOR: [ROLE_EMPLEADO]
  
     providers:
         user_db:
-            entity: { class: Permiso\AuthBundle\Entity\Usuario, property: usuario }
+            entity: { class: Permiso\GestionBundle\Entity\Empleado, property: username }
  
     firewalls:
         main:
@@ -28,6 +28,6 @@ security:
             anonymous: true
     access_control:
         - { path: /login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /user, roles: ROLE_USER }
-        - { path: /admin, roles: ROLE_ADMIN }
+        - { path: /empleado, roles: ROLE_EMPLEADO }
+        - { path: /gestor, roles: ROLE_GESTOR }
         - { path: /.*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
