Cambiados los permisos, añadido un inicio.html.twig una vez autentificado el usuario y comenzando a crear los formularios de entrada de solicitudes.

--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -1,6 +1,6 @@
 _welcome:
     pattern:  /
-    defaults: { _controller: PermisoAuthBundle:Default:index }
+    defaults: { _controller: PermisoGestionBundle:Default:index }
 
 #_welcome:
 #    pattern:  /
