--- a/src/Permiso/AuthBundle/Resources/config/routing.yml
+++ b/src/Permiso/AuthBundle/Resources/config/routing.yml
@@ -1,7 +1,12 @@
-permiso_auth_homepage:
-    pattern:  /
-    defaults: { _controller: PermisoAuthBundle:Default:index }
+#Comentado porque no es necesario.
+#permiso_auth_homepage:
+#    pattern:  /
+#    defaults: { _controller: PermisoAuthBundle:Default:index }
     
 usuario_registrado:
   pattern: /registrar
   defaults: { _controller: PermisoAuthBundle:Security:registrarUsuario }
+  
+inicio_aplicacion:
+  pattern: /inicioAplicacion
+  defaults: { _controller: PermisoGestionBundle:Default:inicio }
