Acción de crear permiso completada a nivel de vista, modelo y controlador. Hace falta implementar gestión de excepciones.

--- a/src/Permiso/GestionBundle/Resources/config/routing.yml
+++ b/src/Permiso/GestionBundle/Resources/config/routing.yml
@@ -14,3 +14,7 @@ nuevas_vacaciones:
   pattern: /usuario/nuevas_vacaciones
   defaults: { _controller: PermisoGestionBundle:Solicitud:solicitarVacaciones }
 
+nuevo_permiso:
+  pattern: /usuario/nuevo_permiso
+  defaults: { _controller: PermisoGestionBundle:Solicitud:solicitarPermiso }
+
