--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,6 +19,8 @@ security:
             form_login:
                 login_path: /login
                 check_path: /login_check
+                username_parameter: username
+                password_parameter: password
                 default_target_path: /empleado/inicioAplicacion
                 always_use_default_target_path: true
             logout:
